--- a/Basic Algorithm of Machine Learning/Task1 Linear_regression.ipynb
+++ b/Basic Algorithm of Machine Learning/Task1 Linear_regression.ipynb
@@ -1075,6 +1075,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "theta:  [ 4.2  5.7 10.8]\n",
+      "predicted value:  [85.2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "class lr_ls():\n",
+    "    def __init__(self):\n",
+    "        self.theta = None\n",
+    "    \n",
+    "    def fit(self, X, y):\n",
+    "        self.theta = np.linalg.inv(X.T @ X) @ X.T @ y\n",
+    "    \n",
+    "    def predict(self, X):\n",
+    "        y_pred = X @ self.theta\n",
+    "        return y_pred\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    x_test = np.array([2,4,5]).reshape(1,-1)\n",
+    "    lr = lr_ls()\n",
+    "    lr.fit(x, y)\n",
+    "    print('theta: ', lr.theta)\n",
+    "    print('predicted value: ', lr.predict(x_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -1122,7 +1158,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "theta:  [[ 4.20000001]\n",
+      " [ 5.70000003]\n",
+      " [10.79999997]]\n",
+      "predicted value:  [[85.19999995]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class lr_gd():\n",
+    "    def __init__(self):\n",
+    "        self.theta = None\n",
+    "        \n",
+    "    def fit(self, X, y, alpha=.02, loss=1e-10):\n",
+    "        #重塑为 2d 矩阵\n",
+    "        y = y.reshape(-1, 1)\n",
+    "        m, d = X.shape\n",
+    "        #初始化 theta\n",
+    "        self.theta = np.zeros((d, 1))\n",
+    "        #初始化\n",
+    "        tol = 1e5\n",
+    "        \n",
+    "        while tol > loss:\n",
+    "            h_f = (X @ self.theta).reshape(-1,1)\n",
+    "            theta = self.theta + alpha * 1/m * X.T @ (y - h_f)\n",
+    "            tol = np.sum(np.abs(theta - self.theta))\n",
+    "            self.theta = theta\n",
+    "        \n",
+    "    def predict(self, X):\n",
+    "        y_pred = X @ self.theta\n",
+    "        return y_pred\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    x_test = np.array([2,4,5]).reshape(1,-1)\n",
+    "    lr = lr_gd()\n",
+    "    lr.fit(x, y)\n",
+    "    print('theta: ', lr.theta)\n",
+    "    print('predicted value: ', lr.predict(x_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "theta:  [ 4.20000001  5.70000003 10.79999997]\n",
+      "predicted value:  [85.19999995]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class lr_gd():\n",
+    "    def __init__(self):\n",
+    "        self.theta = None\n",
+    "        \n",
+    "    def fit(self, X, y, alpha=.02, loss=1e-10):\n",
+    "        #重塑为 2d 矩阵\n",
+    "        y = y.reshape(-1, 1)\n",
+    "        m, d = X.shape\n",
+    "        #初始化 theta\n",
+    "        self.theta = np.zeros((d, ))\n",
+    "        #初始化\n",
+    "        tol = 1e5\n",
+    "        \n",
+    "        while tol > loss:\n",
+    "            h_f = (X @ self.theta).reshape(-1,1)\n",
+    "            theta = self.theta + alpha * np.mean(X * (y - h_f), axis=0)\n",
+    "            tol = np.sum(np.abs(theta - self.theta))\n",
+    "            self.theta = theta\n",
+    "        \n",
+    "    def predict(self, X):\n",
+    "        y_pred = X @ self.theta\n",
+    "        return y_pred\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    x_test = np.array([2,4,5]).reshape(1,-1)\n",
+    "    lr = lr_gd()\n",
+    "    lr.fit(x, y)\n",
+    "    print('theta: ', lr.theta)\n",
+    "    print('predicted value: ', lr.predict(x_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
