--- a/Basic Algorithm of Machine Learning/朴素贝叶斯.md
+++ b/Basic Algorithm of Machine Learning/朴素贝叶斯.md
@@ -24,23 +24,23 @@ class sklearn.naive_bayes.GaussianNB(priors=None)
 ```
 
 参数：
-`priors`: 先验概率大小，如果没有给定，模型则根据样本数据自己计算（利用极大似然法）。
-`var_smoothing`：可选参数，所有特征的最大方差
+- `priors`: 先验概率大小，如果没有给定，模型则根据样本数据自己计算（利用极大似然法）。
+- `var_smoothing`：可选参数，所有特征的最大方差
 属性：
-`class_prior`_:每个样本的概率
-`class_count`:每个类别的样本数量
-`classes`_:分类器已知的标签类型
-`theta_`:每个类别中每个特征的均值
-`sigma_`:每个类别中每个特征的方差
-`epsilon_`:方差的绝对加值方法
+- `class_prior`_:每个样本的概率
+- `class_count`:每个类别的样本数量
+- `classes`_:分类器已知的标签类型
+- `theta_`:每个类别中每个特征的均值
+- `sigma_`:每个类别中每个特征的方差
+- `epsilon_`:方差的绝对加值方法
 
 贝叶斯的方法和其他模型的方法一致。
 
-`fit(X,Y)`:在数据集(X,Y)上拟合模型。
-`get_params()`:获取模型参数。
-`predict(X)`:对数据集X进行预测。
-`predict_log_proba(X)`:对数据集X预测，得到每个类别的概率对数值。predict_proba(X):对数据集X预测，得到每个类别的概率。
-`score(X,Y)`:得到模型在数据集(X,Y)的得分情况。
+- `fit(X,Y)`:在数据集(X,Y)上拟合模型。
+- `get_params()`:获取模型参数。
+- `predict(X)`:对数据集X进行预测。
+- `predict_log_proba(X)`:对数据集X预测，得到每个类别的概率对数值。predict_proba(X):对数据集X预测，得到每个类别的概率。
+- `score(X,Y)`:得到模型在数据集(X,Y)的得分情况。
 
 
 
@@ -51,9 +51,10 @@ $$
 P(x_{i}|y_{k}) = \frac{1}{\sqrt{2\pi\sigma_{y_{k}}^{2}}}exp( -\frac{(x_{i}-\mu_{y_{k}})^2}  {2\sigma_{y_{k}}^{2}}   )
 $$
 数学期望：$\mu$
-方差：$\sigma ^2=\frac{1}{n}\sum_i^n(x_i-\overline x)^2$
-
-
+方差：
+$$
+\sigma ^2=\frac{1}{n}\sum_i^n(x_i-\overline x)^2
+$$
 
 ```python
 import math
